sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:15: error: Unmatched closing brace '}' ignored here
      }
      ^AlgShellSort:22: error: expected class or object definition
def insertionSort() {
^AlgShellSort:35: error: Unmatched closing brace '}' ignored here
}
^