sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var gap=getValueCount()/2
  while (gap>0) {
    for (i <- getValueCount() to 1 by -1) {
      var j=1
      var v=getvalue(i)
      while (j*gap<=i && ! isSmallerThan(i-j*gap,v)) {
        copy(i-j*gap,i-j*gap+1)
        j=j+1
      }
      setValue(i-j*gap+1,v)
    }
    gap=gap/2
      }
    }
  }
}



def insertionSort() {
  for (i <- 1 to getValueCount()-1) {
    var j = 1
    var v = getValue(i)
    while (j<=i && !isSmallerThan(i-j,v)) {
      copy (i-j,i-j+1)
      j=j+1
    }
    setValue(i-j+1,v)
  }
}